force-app/main/default/objects/Creative_Brief_dywtbas__c/Creative_Brief_dywtbas__c.object-meta.xml
<CustomObject>
    <description>This is where you submit a creative brief for a piece of content you want to create</description>
    <label>Creative Brief</label>
    <nameField>
        <label>Creative Brief Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creative Breifs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>