force-app/main/default/objects/Creative_Brief_dywtbas__c/fields/Are_you_writing_the_content_yourself__c.field-meta.xml
<CustomField>
    <fullName>Are_you_writing_the_content_yourself__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you writing the content yourself</label>
    <type>Checkbox</type>
</CustomField>