force-app/main/default/objects/Creative_Brief_dywtbas__c/fields/Asset_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Description__c</fullName>
    <description>Describe the actual asset you are creating</description>
    <inlineHelpText>Describe the asset you are creating. Please be as specific as possible</inlineHelpText>
    <label>Asset Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>