force-app/main/default/objects/Creative_Brief_dywtbas__c/fields/Asset_Goals__c.field-meta.xml
<CustomField>
    <fullName>Asset_Goals__c</fullName>
    <description>Explain why we are creating this asset</description>
    <inlineHelpText>Explain why we are creating this asset</inlineHelpText>
    <label>Asset Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>