force-app/main/default/objects/Creative_Brief_dywtbas__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>What type of asset is this?</description>
    <inlineHelpText>What type of asset is this?</inlineHelpText>
    <label>Asset Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Datasheet</fullName>
            </value>
            <value>
                <fullName>Demo Video</fullName>
            </value>
            <value>
                <fullName>eBook</fullName>
            </value>
            <value>
                <fullName>Infographic</fullName>
            </value>
            <value>
                <fullName>Interactive</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Whitepaper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>