force-app/main/default/objects/Creative_Brief_dywtbas__c/fields/Do_you_need_a_copywriter__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_a_copywriter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Copywriter would review and polish content</inlineHelpText>
    <label>Do you need a copywriter</label>
    <type>Checkbox</type>
</CustomField>