force-app/main/default/objects/Creative_Brief_dywtbas__c/fields/Do_you_need_proofing__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_proofing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Proof reading is for high level editing and adds 2-3 days</inlineHelpText>
    <label>Do you need proofing</label>
    <type>Checkbox</type>
</CustomField>