force-app/main/default/objects/Creative_Brief_dywtbas__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>What persona levels does this asset target</description>
    <inlineHelpText>What persona levels does this asset target</inlineHelpText>
    <label>Persona</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CxO</fullName>
            </value>
            <value>
                <fullName>Manager+</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>