force-app/main/default/objects/Creative_Brief_dywtbas__c/fields/Promotion_Tactics_Required__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Tactics_Required__c</fullName>
    <label>Promotion Tactics Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blog Post</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Dynamic Email</fullName>
            </value>
            <value>
                <fullName>Form and Confirmation Page</fullName>
            </value>
            <value>
                <fullName>Login Promo</fullName>
            </value>
            <value>
                <fullName>Organic Social</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>