force-app/main/default/objects/Creative_Brief_dywtbas__c/fields/target_audience__c.field-meta.xml
<CustomField>
    <fullName>target_audience__c</fullName>
    <description>Is this asset primarily targeting IT or Business Persona</description>
    <inlineHelpText>Is this asset primarily targeting IT or Business Persona</inlineHelpText>
    <label>Target Audience</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>